add generics second part