@@ -2,6 +2,7 @@ package section12Generics.learningExtra;
 
 import section12Generics.learningExtra.model.LPAStudent;
 import section12Generics.learningExtra.model.Student;
+import section12Generics.learningExtra.util.QueryList;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -11,63 +12,61 @@ public class Main {
     public static void main(String[] args) {
 
         int studentCount = 10;
+
+        // Student
         List<Student> students = new ArrayList<>();
         for (int i = 0; i < studentCount; i++) {
             students.add(new Student());
         }
         students.add(new LPAStudent());
-//        printList(students);
-        printMoreLists(students);
+        printList(students);
 
+        // LPAStudent, subclass of Student
         List<LPAStudent> lpaStudents = new ArrayList<>();
         for (int i = 0; i < studentCount; i++) {
             lpaStudents.add(new LPAStudent());
         }
-//        printList(lpaStudents);
-        printMoreLists(lpaStudents);
+        printList(lpaStudents);
 
-        testList(new ArrayList<String>(List.of("Able", "Barry", "Charlie")));
-        testList(new ArrayList<Integer>(List.of(1, 2, 3)));
+//        List<String> stringListTest = Arrays.asList("Ann", "Bill", "Cathy", "John", "Tim");
+//        printList(stringListTest);
 
+        var queryList = new QueryList<>(lpaStudents);
+        var matches = queryList.getMatches(
+                "Course", "Python");
+        printList(matches);
+
+        var students2021 =
+                QueryList.getMatches(students, "YearStarted", "2021");
+        printList(students2021);
+
+//        QueryList<Employee> employeeList = new QueryList<>();
     }
 
-    public static void printMoreLists(List<? extends Student> students) {
+    // type argument
+    public static void printList(List<? extends Student> students) {
+
+//        Student last = students.get(students.size()-1);
+//        students.set(0, last);
 
         for (var student : students) {
-            System.out.println(student);
+            System.out.println(student.getYearStarted());
         }
         System.out.println();
     }
 
-    public static void testList(List<?> list) {
-
-        for (var element : list) {
-            if (element instanceof String s) {
-                System.out.println("String: " + s.toUpperCase());
-            } else if (element instanceof Integer i) {
-                System.out.println("Integer: " + i.floatValue());
-            }
-        }
-    }
-
-//    public static void testList(List<String> list) {
-//
-//        for (var element : list) {
-//            System.out.println("String: " + element.toUpperCase());
-//        }
-//    }
-//
-//    public static void testList(List<Integer> list) {
-//
-//        for (var element : list) {
-//            System.out.println("Integer: " + element.floatValue());
-//        }
-//    }
-
+    // generic method
 //    public static <T extends Student> void printList(List<T> students) {
+//        for (var student : students) {
+//            System.out.println(student.getYearStarted());
+//        }
+//        System.out.println();
+//    }
+
+//    public static void printList(List students) {
 //
 //        for (var student : students) {
-//            System.out.println(student.getYearStarted() + ": " + student);
+//            System.out.println(student);
 //        }
 //        System.out.println();
 //    }
